scss/_nav.scss
///
/// Base class
///

.nav {
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.nav-link {
  display: inline-block;

  @include hover-focus {
    text-decoration: none;
  }

  // Disabled state lightens text and removes hover/tab effects
  &.disabled {
    color: $nav-disabled-link-color;

    @include plain-hover-focus {
      color: $nav-disabled-link-hover-color;
      cursor: $cursor-disabled;
      background-color: transparent;
    }
  }
}


// Nav inline

.nav-inline {
  .nav-item {
    display: inline-block;
  }

  .nav-item + .nav-item,
  .nav-link + .nav-link {
    margin-left: 1rem;
  }
}


///
/// Tabs
///

.nav-tabs {

  ///
  /// Horizontal tabs
  ///

  @if $enable-flex {
    display: flex;
    flex-wrap: wrap;

  } @else {
    display: table;
    table-layout: fixed;
    width: 100%;

    .nav-item {
      display: table-cell;
    }
  }

  .nav-link {
    display: block;
  }

  &.tab-justified {
    .nav-item {
      flex: 1;
    }
  }

  @include media-breakpoint-only(xs) {
    .nav-item {
      flex: 1;
    }
    .nav-link {
      text-align: center;
    }
  }


  ///
  ///  Plain tabs style
  ///
  &:not(.tab-bar) {
    margin-bottom: -$border-width;

    .nav-link {
      padding: $btn-lg-padding-y ($btn-padding-x * 2);
      border: $border-width solid $charcoal-lighter;
      background-color: $body-bg;
      color: $body-color;



      .bg-dark & {
        color: #fff;
      }

      &:hover,
      &:active {
        color: $link-color;

        .bg-dark & {
          color: $teal;
        }
      }

      &.active {
        border-top: ($border-width * 2) solid $link-color;
        border-bottom: 0; // Eliminate bottom border to offset height of double border on top

        &,
        &:hover,
        &:active,
        &:visited {
          // border-color: $link-color;
          color: $link-color;

          .bg-dark & {
            // border-color: $teal;
            color: $teal;
          }
        }
      }
    }

    + .tab-content {
      padding: ($btn-padding-y * 2) ($btn-padding-x * 2);
      border: $border-width solid $charcoal-lighter;
      // border-top: 0;
    }

  }


  ///
  ///  Tab bar style
  ///
  &.tab-bar .nav-link {
    @extend %toggle-base;
    display: block;
    min-width: $btn-lg-min-width;
    padding: $btn-lg-padding-y $btn-padding-x;

    @include hover-focus {
      @extend %toggle-hover;
    }

    &.disabled {
      @include plain-hover-focus {
        color: $nav-disabled-link-color;
        background-color: transparent;
        border-color: transparent;
        cursor: $cursor-disabled;
      }
    }

    &.active,
    .nav-item.open & {
      @include plain-hover-focus {
        @extend %toggle-active;
      }
    }

  }


}


///
/// Tabbable tabs
///

// Hide tabbable panes to start, show them when `.active`
.tab-content {
  > .tab-pane {
    display: none;
  }
  > .active {
    display: block;
  }
}

